# twitch_pb_notifications

./: .gitignore  README.md  image_processing_sandbox.ipynb  pyproject.toml  selenium_example.ipynb  tesseract_example.ipynb  twitch_api_example.ipynb
debug/: debug.py
notebooks/: context.py  pbn_process_example.ipynb
pbn/: process_stream.py  process_stream_thumbnail.py  stream_notifications.py
pbn/preprocess_image/: preprocess.py
pbn/process_image_text/: generic.py  pb_info.py  process.py
pbn/process_image_text/user_fits/: wilko.py
pbn/telegram_bot/: wolle_bot_bot_send_message.py  wolle_bot_bot_start.py
pbn/tesseract_functions/: process_image.py
pbn/tesseract_wrappers/: image_to_text.py
pbn/twitch_api/: get_client.py  streams.py
pbn/twitch_functions/: twitch_thumbnails.py
tests/: test_process.py  test_tesseract_functions.py  txt
tests/data/twitch_thumbnails_text/: distortion2_1652210545.txt  larxa_1652210551.txt  linkus7_1652210546.txt  orchlon_1652210547.txt  slade_1652210548.txt  z4t0x_1652210549.txt
tests/data/twitch_thumbnails_text/.ipynb_checkpoints/: distortion2_1652210545-checkpoint.txt
tests/manual/: context.py  test_get_streams.py  test_report_pb_in_progress.py  test_save_thumbnail.py  test_send_message.py
tests/manual/data/: wilko_1653655420.txt  wilko_1653655996.txt  wilko_1653657024.txt
tests/unit/: context.py  test_image_to_pb_info.py  test_image_to_text.py  test_tesseract_functions.py
