[tool.poetry]
name = "twitch_pb_notifications"
version = "0.1.0"
description = ""
authors = ["Wolfgang <wolfgang.spindeler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytesseract = "^0.3.9"
jupyterlab = "^3.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
