[tool.poetry]
name = "twitch_pb_notifications"
version = "0.1.0"
description = ""
authors = ["Wolfgang <wolfgang.spindeler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytesseract = "^0.3.9"
jupyterlab = "^3.4.0"
selenium = "^4.1.5"
twitchAPI = "^2.5.3"
python-twitch-client = "^0.7.1"
python-dotenv = "^0.20.0"
python-telegram-bot = "^20.0a0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
